--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +9,73 @@
     <!--Stylesheet-->
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    
+    <div class="container">
+        <main>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam fugit facilis excepturi. Fugit necessitatibus
+            maxime libero voluptas qui incidunt, architecto esse cumque veritatis suscipit accusamus quisquam non
+            possimus assumenda tempora.
+            Quis in optio dolores vero repellendus aliquam laboriosam doloremque, officia veritatis, natus minima
+            praesentium culpa quisquam blanditiis ea exercitationem perferendis eos nobis ut, porro omnis ratione saepe.
+            Minima, officiis commodi.
+            Eligendi corrupti consequuntur, a similique consequatur esse quasi accusamus ut veritatis tenetur sequi
+            alias dolorem dolores assumenda iure quisquam numquam excepturi repudiandae, dolorum repellat enim aperiam,
+            laudantium totam odit? Laboriosam.
+            Mollitia totam saepe similique nemo, magni doloribus incidunt vero harum quam deleniti cupiditate alias
+            perspiciatis rem animi optio soluta odit, quisquam deserunt aliquam doloremque nisi debitis, suscipit omnis
+            illum! Ipsum!
+            Cupiditate quam rerum maiores? Nihil dolorem dolores dolor, deserunt consequatur quia est, fugiat explicabo
+            optio laboriosam repudiandae nemo non molestiae inventore quidem exercitationem quos labore sed qui quaerat
+            in assumenda.
+            Voluptate, quisquam neque, recusandae sunt quod possimus ea necessitatibus repudiandae illum rem dicta nobis
+            suscipit sed? Consectetur deleniti dolores nesciunt eius, labore ipsam quae, odio aliquam, doloribus ab
+            iusto culpa.
+            Repellendus molestiae eos deserunt distinctio. Tenetur a enim maxime aut. Ad nulla nam suscipit. Architecto
+            vitae, ipsum eum soluta dolorem vel alias omnis, blanditiis recusandae illum officiis dolores, iure error!
+            Fuga, accusantium inventore perferendis doloribus neque libero corrupti similique soluta placeat aspernatur,
+            quo recusandae eaque magni quos, quaerat officiis vel nesciunt amet commodi et ad minus eligendi? Labore,
+            est fuga.
+            Eveniet ea eligendi voluptatem voluptates odit beatae qui totam iusto quis! Ducimus aut iste, exercitationem
+            ratione repudiandae omnis aliquid? Tempore inventore voluptatibus voluptas odit veritatis dolor dicta
+            adipisci dolore odio.
+            Assumenda consequatur consectetur ducimus delectus magnam cumque. Fugiat quas est recusandae animi similique
+            odio nisi a magni facere. Incidunt saepe laborum voluptas maiores, hic ab perspiciatis harum quas provident
+            quaerat?
+            Nam modi voluptates dicta tenetur maxime laborum nisi qui recusandae corporis quos numquam odio distinctio,
+            illo enim odit, optio possimus tempora, sed libero? Dolores, suscipit voluptas perspiciatis laboriosam
+            eligendi veritatis!
+            Excepturi blanditiis, quia nostrum illo, hic ad neque nihil totam vitae ipsa maiores voluptatum laboriosam,
+            quas quo est. Animi consectetur sed doloribus? Architecto eius facilis placeat necessitatibus obcaecati.
+            Quaerat, error.
+            Quidem delectus quod velit iusto ducimus dolor non expedita qui rem debitis, repellat voluptates porro
+            cumque accusamus, doloribus inventore dicta corporis beatae nihil culpa similique? Sapiente ab porro
+            architecto quos.
+            Consequuntur ut ipsam obcaecati, iste, amet necessitatibus cumque velit in odio neque voluptate. Quam, porro
+            ipsum inventore quibusdam consectetur officia fugiat esse tempore laborum consequatur, doloribus officiis,
+            fuga sint quas.
+            Sed quod facere numquam ab? Laboriosam error doloremque velit optio aut obcaecati! Voluptatem dolorem
+            recusandae suscipit eum molestiae maxime temporibus ducimus perspiciatis, eaque tempora alias distinctio
+            veniam quae quos ipsa.
+            Enim vitae perferendis excepturi omnis consequatur optio natus, magni harum similique ut deleniti temporibus
+            maxime ducimus, a repellat quaerat cum adipisci dolorum libero, porro iste odit ex veritatis. Voluptatum,
+            voluptas!
+            Iusto iure sit ad officia explicabo. Harum ipsa cum inventore at laborum minus assumenda obcaecati
+            repudiandae, suscipit itaque debitis? Ratione assumenda maiores ducimus unde earum officia distinctio fuga
+            odio velit?
+            Ea, aut? Consectetur odio velit quae quam, quos dicta cum ipsam quia accusamus cumque eius veniam quasi
+            animi repellat ducimus quibusdam, nam ratione ullam, suscipit libero? In rem adipisci facere!
+            Enim nobis amet similique a sit aliquid deleniti. Dolorem earum, ea modi unde repellendus voluptates dolorum
+            iusto hic quis minus, rem, libero cum qui aut laudantium. Eos molestiae ratione sequi.
+            Amet ex modi mollitia quisquam at, porro laudantium assumenda perferendis unde obcaecati id culpa dicta
+            pariatur harum facere aut autem incidunt accusantium dolore nemo. Voluptatibus neque corporis adipisci
+            deleniti maiores.
+        </main>
+        <footer>
+
+        </footer>
+
+    </div>
 </body>
+
 </html>
