--- a/index.html
+++ b/index.html
@@ -12,64 +12,70 @@
 
 <body>
     <div class="container">
+
         <main>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam fugit facilis excepturi. Fugit necessitatibus
-            maxime libero voluptas qui incidunt, architecto esse cumque veritatis suscipit accusamus quisquam non
-            possimus assumenda tempora.
-            Quis in optio dolores vero repellendus aliquam laboriosam doloremque, officia veritatis, natus minima
-            praesentium culpa quisquam blanditiis ea exercitationem perferendis eos nobis ut, porro omnis ratione saepe.
-            Minima, officiis commodi.
-            Eligendi corrupti consequuntur, a similique consequatur esse quasi accusamus ut veritatis tenetur sequi
-            alias dolorem dolores assumenda iure quisquam numquam excepturi repudiandae, dolorum repellat enim aperiam,
-            laudantium totam odit? Laboriosam.
-            Mollitia totam saepe similique nemo, magni doloribus incidunt vero harum quam deleniti cupiditate alias
-            perspiciatis rem animi optio soluta odit, quisquam deserunt aliquam doloremque nisi debitis, suscipit omnis
-            illum! Ipsum!
-            Cupiditate quam rerum maiores? Nihil dolorem dolores dolor, deserunt consequatur quia est, fugiat explicabo
-            optio laboriosam repudiandae nemo non molestiae inventore quidem exercitationem quos labore sed qui quaerat
-            in assumenda.
-            Voluptate, quisquam neque, recusandae sunt quod possimus ea necessitatibus repudiandae illum rem dicta nobis
-            suscipit sed? Consectetur deleniti dolores nesciunt eius, labore ipsam quae, odio aliquam, doloribus ab
-            iusto culpa.
-            Repellendus molestiae eos deserunt distinctio. Tenetur a enim maxime aut. Ad nulla nam suscipit. Architecto
-            vitae, ipsum eum soluta dolorem vel alias omnis, blanditiis recusandae illum officiis dolores, iure error!
-            Fuga, accusantium inventore perferendis doloribus neque libero corrupti similique soluta placeat aspernatur,
-            quo recusandae eaque magni quos, quaerat officiis vel nesciunt amet commodi et ad minus eligendi? Labore,
-            est fuga.
-            Eveniet ea eligendi voluptatem voluptates odit beatae qui totam iusto quis! Ducimus aut iste, exercitationem
-            ratione repudiandae omnis aliquid? Tempore inventore voluptatibus voluptas odit veritatis dolor dicta
-            adipisci dolore odio.
-            Assumenda consequatur consectetur ducimus delectus magnam cumque. Fugiat quas est recusandae animi similique
-            odio nisi a magni facere. Incidunt saepe laborum voluptas maiores, hic ab perspiciatis harum quas provident
-            quaerat?
-            Nam modi voluptates dicta tenetur maxime laborum nisi qui recusandae corporis quos numquam odio distinctio,
-            illo enim odit, optio possimus tempora, sed libero? Dolores, suscipit voluptas perspiciatis laboriosam
-            eligendi veritatis!
-            Excepturi blanditiis, quia nostrum illo, hic ad neque nihil totam vitae ipsa maiores voluptatum laboriosam,
-            quas quo est. Animi consectetur sed doloribus? Architecto eius facilis placeat necessitatibus obcaecati.
-            Quaerat, error.
-            Quidem delectus quod velit iusto ducimus dolor non expedita qui rem debitis, repellat voluptates porro
-            cumque accusamus, doloribus inventore dicta corporis beatae nihil culpa similique? Sapiente ab porro
-            architecto quos.
-            Consequuntur ut ipsam obcaecati, iste, amet necessitatibus cumque velit in odio neque voluptate. Quam, porro
-            ipsum inventore quibusdam consectetur officia fugiat esse tempore laborum consequatur, doloribus officiis,
-            fuga sint quas.
-            Sed quod facere numquam ab? Laboriosam error doloremque velit optio aut obcaecati! Voluptatem dolorem
-            recusandae suscipit eum molestiae maxime temporibus ducimus perspiciatis, eaque tempora alias distinctio
-            veniam quae quos ipsa.
-            Enim vitae perferendis excepturi omnis consequatur optio natus, magni harum similique ut deleniti temporibus
-            maxime ducimus, a repellat quaerat cum adipisci dolorum libero, porro iste odit ex veritatis. Voluptatum,
-            voluptas!
-            Iusto iure sit ad officia explicabo. Harum ipsa cum inventore at laborum minus assumenda obcaecati
-            repudiandae, suscipit itaque debitis? Ratione assumenda maiores ducimus unde earum officia distinctio fuga
-            odio velit?
-            Ea, aut? Consectetur odio velit quae quam, quos dicta cum ipsam quia accusamus cumque eius veniam quasi
-            animi repellat ducimus quibusdam, nam ratione ullam, suscipit libero? In rem adipisci facere!
-            Enim nobis amet similique a sit aliquid deleniti. Dolorem earum, ea modi unde repellendus voluptates dolorum
-            iusto hic quis minus, rem, libero cum qui aut laudantium. Eos molestiae ratione sequi.
-            Amet ex modi mollitia quisquam at, porro laudantium assumenda perferendis unde obcaecati id culpa dicta
-            pariatur harum facere aut autem incidunt accusantium dolore nemo. Voluptatibus neque corporis adipisci
-            deleniti maiores.
+                <div class="sidebar"></div>
+                <div class="content">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi earum nesciunt quis, eum commodi
+                    officiis vero aperiam eaque pariatur eius nostrum totam atque corporis illum tempore nam similique!
+                    Voluptatibus, veniam?
+                    Et assumenda nobis perferendis! Error aliquid dolorum vitae reiciendis, asperiores ut repellat
+                    nostrum laudantium quisquam temporibus dicta modi officia vero sit quod cumque totam expedita
+                    laborum reprehenderit ullam nisi eveniet.
+                    Nesciunt deserunt doloribus sit ut ipsum rem a provident? Assumenda veniam, culpa debitis quia
+                    maxime placeat corrupti quidem sapiente harum, sequi quasi. Expedita eos nisi et incidunt eligendi,
+                    sapiente libero.
+                    Enim porro, ullam ipsa accusamus explicabo non perspiciatis! Ea illum accusantium mollitia
+                    temporibus voluptates vero maiores impedit totam obcaecati provident perspiciatis, beatae facere
+                    vitae, delectus laborum numquam aliquid quod at?
+                    Molestias ab, natus odio soluta similique nesciunt quisquam maxime tenetur praesentium, qui iure,
+                    repellendus rerum cum consequatur doloremque neque totam exercitationem quis et doloribus nobis nisi
+                    laborum accusamus animi? Deleniti.
+                    Pariatur, quibusdam harum tenetur adipisci laboriosam animi saepe nobis vero maxime fuga praesentium
+                    placeat? Natus et facilis cumque unde. Cum aliquam obcaecati optio modi molestias eaque expedita
+                    quos laboriosam nisi?
+                    Aperiam alias ratione excepturi doloribus dolorem possimus, rem adipisci eaque reiciendis, iure
+                    deserunt ea quod maxime natus? Optio corporis obcaecati ipsum qui alias reprehenderit at? Debitis
+                    earum quisquam voluptatibus! Eum?
+                    Illo eveniet perspiciatis, maxime accusamus alias id unde quod? Quo laudantium nostrum excepturi
+                    necessitatibus rem et provident corrupti fugit ex quibusdam. Impedit eligendi quia debitis rerum
+                    natus esse ex omnis!
+                    Sequi illum qui nostrum delectus nisi rem ex quisquam ullam, perferendis, ea libero natus
+                    consequuntur. Nostrum quibusdam sapiente tenetur, libero quia molestiae quis culpa. Quibusdam dicta
+                    sint voluptatibus est nesciunt!
+                    Doloribus eaque, dolorem, odit quasi mollitia incidunt totam exercitationem qui eum rem maxime
+                    possimus rerum esse fugit voluptatibus repellat doloremque odio, voluptates aspernatur magnam. Nulla
+                    iste dolorum nemo corrupti culpa.
+                    Eius harum esse quas beatae possimus. Consectetur neque molestiae qui? Saepe obcaecati sit deserunt
+                    distinctio accusamus aliquam tempora deleniti sed impedit accusantium fuga in unde voluptas,
+                    laboriosam vel eos dolore?
+                    Dolores aspernatur maiores, esse vero blanditiis sunt temporibus impedit ipsum, error accusantium
+                    facilis consequatur ipsam commodi, accusamus reprehenderit natus magni nulla? Laborum laudantium quo
+                    sunt, fuga doloribus alias eos labore?
+                    Eum hic distinctio eveniet quas, odit impedit consequuntur iusto officiis. Ab, nobis eos
+                    consequuntur beatae dolor provident quos necessitatibus? Numquam, soluta architecto quibusdam ad
+                    reiciendis ab tempore vel blanditiis autem.
+                    Modi quis numquam in corrupti porro magni velit accusantium illum rerum fuga voluptas assumenda
+                    doloribus neque, hic, a quia quas molestias aliquam rem est illo debitis consequuntur distinctio
+                    eum! Vero!
+                    Dignissimos obcaecati quod dolorum beatae culpa amet accusamus dolore, iste veniam porro est fugit
+                    alias magni atque, quaerat assumenda aliquam quos expedita architecto nam? Minus rem excepturi id
+                    eum iste!
+                    Doloribus, aspernatur amet animi laboriosam, quae quod pariatur vero minima voluptatibus ad in magni
+                    maiores fugit sapiente odio voluptate veniam sit mollitia ex esse velit! Illum cumque dignissimos
+                    earum placeat.
+                    Non, ipsum a repudiandae architecto error, asperiores ad necessitatibus possimus saepe distinctio
+                    quibusdam. Dolorem amet temporibus itaque nesciunt maxime eum veniam animi totam. Inventore
+                    accusamus incidunt vel dicta ratione? Doloribus.
+                    Repellendus, ipsam architecto animi laudantium culpa magnam mollitia nihil officia eaque aperiam
+                    unde similique in possimus, aliquid impedit perspiciatis, ex cum dolores reprehenderit? Facilis
+                    expedita voluptates quidem accusantium ea corrupti.
+                    Illo error id velit modi porro provident asperiores ipsam, nam dolor temporibus vitae quis dicta,
+                    earum aliquid eveniet saepe accusamus illum delectus. Rem sequi at qui cupiditate ea sed quaerat!
+                    Eveniet ab repudiandae commodi? Ad eum cupiditate, natus dolor animi placeat. Veniam, laborum porro?
+                    Illum, reiciendis, veritatis quo distinctio numquam consectetur rerum laboriosam nam quia, tempora
+                    soluta ipsa autem sint!
+                </div>
         </main>
         <footer>
 
