--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <main>
                 <div class="sidebar"></div>
                 <div class="content">
+                    <div class="header-content"></div>
+                    <div>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi earum nesciunt quis, eum commodi
                     officiis vero aperiam eaque pariatur eius nostrum totam atque corporis illum tempore nam similique!
                     Voluptatibus, veniam?
@@ -75,6 +77,8 @@
                     Eveniet ab repudiandae commodi? Ad eum cupiditate, natus dolor animi placeat. Veniam, laborum porro?
                     Illum, reiciendis, veritatis quo distinctio numquam consectetur rerum laboriosam nam quia, tempora
                     soluta ipsa autem sint!
+                </div>
+
                 </div>
         </main>
         <footer>
