fixed sidebar responsive

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
     <!--Stylesheet-->
     <link rel="stylesheet" href="css/style.css">
+
+    <!--Responsive Stylesheet-->
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
 
 <body>
