--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify</title>
 
+    <!--Font Family-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+
+    <!--Favicon-->
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+
     <!--Stylesheet-->
     <link rel="stylesheet" href="css/style.css">
 
@@ -17,10 +25,43 @@
     <div class="container">
 
         <main>
-                <div class="sidebar"></div>
-                <div class="content">
-                    <div class="header-content"></div>
-                    <div>
+            <!--Sidebar-->
+            <div class="sidebar">
+                <ul>
+                    <li>
+                        <img class="logo-small" src="img/logo-small.svg" alt="logo small">
+                        <img class="logo-big" src="img/logo.svg" alt="logo big">
+
+                    </li>
+                    <li>
+                        <img class="icon-38" src="img/home.svg" alt="home">
+                        <p>Home</p>
+                    </li>
+                    <li>
+                        <img class="icon-38" src="img/search.svg" alt="cerca">
+                        <p>Cerca</p>
+                    </li>
+                    <li>
+                        <img class="icon-38" src="img/libreria.svg" alt="libreria">
+                        <p>La tua libreria</p>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <img class="icon-24" src="img/download.svg" alt="download">
+                        <p>Installa app</p>
+
+                    </li>
+                    <li>
+                        <img class="icon-24 profile" src="img/profile.svg" alt="profilo">
+                        <p>John Doe</p>
+                    </li>
+                </ul>
+
+            </div>
+            <div class="content">
+                <div class="header-content"></div>
+                <div>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi earum nesciunt quis, eum commodi
                     officiis vero aperiam eaque pariatur eius nostrum totam atque corporis illum tempore nam similique!
                     Voluptatibus, veniam?
@@ -82,7 +123,7 @@
                     soluta ipsa autem sint!
                 </div>
 
-                </div>
+            </div>
         </main>
         <footer>
 
