--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify</title>
 
+    <!--Fontawesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <!--Font Family-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -61,7 +66,9 @@
 
             </div>
             <div class="content">
-                <div class="header-content"></div>
+                <div class="header-content">
+                    <a href="#">EFFETTUA L'UPGRADE</a>
+                </div>
                 <div>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi earum nesciunt quis, eum commodi
                     officiis vero aperiam eaque pariatur eius nostrum totam atque corporis illum tempore nam similique!
@@ -127,6 +134,44 @@
             </div>
         </main>
         <footer>
+            <div class="footer-section footer-track">
+                <img class="footer-track-cover" src="img/sinister.jpeg" alt="Sinister">
+                <div class="footer-track-info">
+                    <p class="album-title">Sinister</p>
+                    <div class="album-soundtrack-album">
+                        <p class="soundtrack">brano</p>
+                        <p class="artist">nome</p>
+                    </div>
+                </div>
+                <div class="footer-section footer-icons">
+                    <i class="fa-regular fa-heart"></i>
+                    <i class="fa-regular fa-folder"></i>
+                </div>
+            </div>
+            <div class="footer-player footer-section">
+                <div class="footer-player-controller">
+                    <i class="fa-solid fa-shuffle"></i>
+                    <i class="fa-solid fa-backward-step"></i>
+                    <i class="fa-regular fa-circle-play play"></i>
+                    <i class="fa-solid fa-forward-step"></i>
+                    <i class="fa-solid fa-rotate-right"></i>
+                </div>
+                <div class="footer-player-progress-bar">
+                    <div class="progress-bar">
+                        <div class="current-progress"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-section footer-settings">
+                <i class="fa-solid fa-list-ul"></i>
+                <i class="fa-solid fa-display"></i>
+                <i class="fa-solid fa-volume-high"></i>
+                <div class="footer-volume-progress-bar">
+                    <div class="progress-bar">
+                        <div class="current-progress"></div>
+                    </div>
+                </div>
+            </div>
 
         </footer>
 
