added pseudo element navbar

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <div class="content-page">
                     <nav>
                         <ul>
-                            <li><a href="#">IN EVIDENZA</a></li>
+                            <li class="active"><a href="#">IN EVIDENZA</a></li>
                             <li><a href="#">PODCAST</a></li>
                             <li><a href="#">CLASSIFICHE</a></li>
                             <li><a href="#">GENERI E MOOD</a></li>
