--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             <img class="logo-big" src="img/logo.svg" alt="logo big">
 
                         </li>
-                        <li>
+                        <li class="active">
                             <img class="icon-38" src="img/home.svg" alt="home">
                             <p>Home</p>
                         </li>
@@ -88,11 +88,19 @@
                 </ul>
 
             </div>
+
+            <!--main content-->
+
+            <!--Main content Header-->
+
             <div class="content">
                 <div class="header-content">
                     <a href="#">EFFETTUA L'UPGRADE</a>
                 </div>
                 <div class="content-page">
+
+                    <!--Main content Navbar-->
+
                     <nav>
                         <ul>
                             <li class="active"><a href="#">IN EVIDENZA</a></li>
@@ -103,12 +111,18 @@
                             <li><a href="#">SCOPRI</a></li>
                         </ul>
                     </nav>
+
+                    <!--Main content galleries-->
+
                     <section class="recently-played">
                         <h3>Recently Played</h3>
                         <ul class="row gallery">
                             <li class="col fb-2 fb-4 fb-6">
                                 <article>
                                     <figure class="card-cover">
+                                        <div class="player">
+                                            <i class="fa-regular fa-circle-play"></i>
+                                        </div>
                                         <img src="img/metal_lifting.jpg" alt="heavy metal">
                                     </figure>
                                     <h4>Heavy Metal</h4>
@@ -118,6 +132,9 @@
                             <li class="col fb-2 fb-4 fb-6">
                                 <article>
                                     <figure class="card-cover">
+                                        <div class="player">
+                                            <i class="fa-regular fa-circle-play"></i>
+                                        </div>
                                         <img src="img/stranger.jpeg" alt="sranger things">
                                     </figure>
                                     <h4>Stranger Things Vol. 1 (a Netflix Original Series Soundtrack)</h4>
@@ -127,6 +144,9 @@
                             <li class="col fb-2 fb-4 fb-6">
                                 <article>
                                     <figure class="card-cover">
+                                        <div class="player">
+                                            <i class="fa-regular fa-circle-play"></i>
+                                        </div>
                                         <img src="img/aquietplace.jpeg" alt="a quiet place">
                                     </figure>
                                     <h4>A quiet place</h4>
@@ -136,6 +156,9 @@
                             <li class="col fb-2 fb-4 fb-6">
                                 <article>
                                     <figure class="card-cover">
+                                        <div class="player">
+                                            <i class="fa-regular fa-circle-play"></i>
+                                        </div>
                                         <img src="img/split.jpeg" alt="split">
                                     </figure>
                                     <h4>Split</h4>
@@ -145,6 +168,9 @@
                             <li class="col fb-2 fb-4 fb-6">
                                 <article>
                                     <figure class="card-cover">
+                                        <div class="player">
+                                            <i class="fa-regular fa-circle-play"></i>
+                                        </div>
                                         <img src="img/cure.jpeg" alt="cure wellness">
                                     </figure>
                                     <h4>A cure for wellness</h4>
@@ -154,6 +180,9 @@
                             <li class="col fb-2 fb-4 fb-6">
                                 <article>
                                     <figure class="card-cover">
+                                        <div class="player">
+                                            <i class="fa-regular fa-circle-play"></i>
+                                        </div>
                                         <img src="img/sinister.jpeg" alt="sinister">
                                     </figure>
                                     <h4>Sinister</h4>
@@ -169,6 +198,9 @@
                             <li class="col fb-2 fb-4 fb-6">
                                 <article>
                                     <figure class="card-cover">
+                                        <div class="player">
+                                            <i class="fa-regular fa-circle-play"></i>
+                                        </div>
                                         <img src="img/radar.jpeg" alt="radar">
                                     </figure>
                                     <h4>Release Radar</h4>
@@ -177,6 +209,9 @@
                             <li class="col fb-2 fb-4 fb-6">
                                 <article>
                                     <figure class="card-cover">
+                                        <div class="player">
+                                            <i class="fa-regular fa-circle-play"></i>
+                                        </div>
                                         <img src="img/mixdaily.jpeg" alt="mix daily">
                                     </figure>
                                     <h4>Daily mix 1</h4>
@@ -192,6 +227,9 @@
                             <li class="col fb-2 fb-4 fb-6">
                                 <article>
                                     <figure class="card-cover">
+                                        <div class="player">
+                                            <i class="fa-regular fa-circle-play"></i>
+                                        </div>
                                         <img src="img/youg.jpeg" alt="youg">
                                     </figure>
                                     <h4>Youg</h4>
@@ -200,6 +238,9 @@
                             <li class="col fb-2 fb-4 fb-6">
                                 <article>
                                     <figure class="card-cover">
+                                        <div class="player">
+                                            <i class="fa-regular fa-circle-play"></i>
+                                        </div>
                                         <img src="img/einaudi.jpeg" alt="einaudi">
                                     </figure>
                                     <h4>Einaudi</h4>
@@ -213,6 +254,9 @@
 
             </div>
         </main>
+
+        <!--footer-->
+
         <footer>
             <div class="footer-section footer-track">
                 <img class="footer-track-cover" src="img/sinister.jpeg" alt="Sinister">
