--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                     </div>
                 </div>
 
+                <div class="footer-sidebar">
                 <ul>
                     <li>
                         <img class="icon-24" src="img/download.svg" alt="download">
@@ -86,6 +87,8 @@
                         <p>John Doe</p>
                     </li>
                 </ul>
+            </div>
+
 
             </div>
 
