--- a/index.html
+++ b/index.html
@@ -75,19 +75,19 @@
                 </div>
 
                 <div class="footer-sidebar">
-                <ul>
-                    <li>
-                        <img class="icon-24" src="img/download.svg" alt="download">
-                        <p>Installa app</p>
+                    <ul>
+                        <li>
+                            <img class="icon-24" src="img/download.svg" alt="download">
+                            <p>Installa app</p>
 
-                    </li>
-                    <hr>
-                    <li>
-                        <img class="icon-24 profile" src="img/profile.svg" alt="profilo">
-                        <p>John Doe</p>
-                    </li>
-                </ul>
-            </div>
+                        </li>
+                        <hr>
+                        <li>
+                            <img class="icon-24 profile" src="img/profile.svg" alt="profilo">
+                            <p>John Doe</p>
+                        </li>
+                    </ul>
+                </div>
 
 
             </div>
@@ -220,7 +220,7 @@
                                     <h4>Daily mix 1</h4>
                                 </article>
                             </li>
-                            
+
                         </ul>
                     </section>
                     <section class="popular-artists">
@@ -237,7 +237,7 @@
                                     </figure>
                                     <h4>Youg</h4>
                                 </article>
-                            </li>   
+                            </li>
                             <li class="col fb-2 fb-4 fb-6">
                                 <article>
                                     <figure class="card-cover">
@@ -249,7 +249,7 @@
                                     <h4>Einaudi</h4>
                                 </article>
                             </li>
-                            
+
                         </ul>
                     </section>
 
@@ -266,22 +266,22 @@
                 <div class="footer-track-info">
                     <p class="album-title">Sinister</p>
                     <div class="album-soundtrack-album">
-                        <p class="soundtrack">brano</p>
-                        <p class="artist">nome</p>
+                        <p class="soundtrack hover">brano</p>
+                        <p class="artist hover">nome</p>
                     </div>
                 </div>
                 <div class="footer-section footer-icons">
-                    <i class="fa-regular fa-heart"></i>
-                    <i class="fa-regular fa-folder"></i>
+                    <i class="fa-regular fa-heart hover"></i>
+                    <i class="fa-regular fa-folder hover"></i>
                 </div>
             </div>
             <div class="footer-player footer-section">
                 <div class="footer-player-controller">
-                    <i class="fa-solid fa-shuffle"></i>
-                    <i class="fa-solid fa-backward-step"></i>
-                    <i class="fa-regular fa-circle-play play"></i>
-                    <i class="fa-solid fa-forward-step"></i>
-                    <i class="fa-solid fa-rotate-right"></i>
+                    <i class="fa-solid fa-shuffle fa-icon-16"></i>
+                    <i class="fa-solid fa-backward-step fa-icon-16"></i>
+                    <i class="fa-regular fa-circle-play play fa-icon-32"></i>
+                    <i class="fa-solid fa-forward-step fa-icon-16"></i>
+                    <i class="fa-solid fa-rotate-right fa-icon-16"></i>
                 </div>
                 <div class="footer-player-progress-bar">
                     <div class="progress-bar">
